Fixing delay issue in checkboxes when the completed tasks is collapsed

--- a/css/main.scss
+++ b/css/main.scss
@@ -256,7 +256,7 @@ input[type="checkbox"] {
 }
 
 .completed-tasks__list.hidden {
-  visibility: hidden;
+  display: none;
 }
 
 .item-text {
